--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,28 @@
 }
 
 #white-container {
+    margin-top: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
     width: 40%;
     min-height: 40%;
     max-height: auto;
     position: absolute;
     left: 50%;
-    transform: translate(-50%, -170%);
+    transform: translate(-50%, -160%);
     background: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 1rem;
+    z-index: 1;
+    border-radius: 20px;
+}
+
+h1 {
+    font-size: 35px;
+    display: flex;
+    align-items: center;
 }
 
 .answer {
@@ -46,11 +57,10 @@ body {
 
 @media (max-width: 768px) {
     #white-container {
-        width: 80%;
+        width: 60%;
         /* Adjust the width for smaller screens if needed */
         height: auto;
         /* Adjust the height for smaller screens if needed */
-        transform: translate(-50%, -100%);
         /* Adjust the vertical translation */
     }
 }
@@ -60,10 +70,16 @@ body {
 @media (max-width: 480px) {
     #white-container {
         width: 90%;
-        /* Adjust the width for mobile screens if needed */
         height: auto;
-        /* Adjust the height for mobile screens if needed */
-        transform: translate(-50%, -50%);
-        /* Adjust the vertical translation */
     }
+}
+
+.plus-minus {
+    background-image: url(images/icon-plus.svg);
+    width: 30px;
+    height: 30px;
+}
+
+.q-and-a {
+    display: grid;
 }
