Made container responsive to size of content

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+:root {
+    font-size: 16px;
+    font-family: "Work Sans", sans serif;
+    color: hsl(292, 42%, 14%);
+
+}
+
+h1 {
+    font-size: 3rem;
+}
+
 .attribution {
     font-size: 11px;
     text-align: center;
@@ -7,16 +18,22 @@
     color: hsl(228, 45%, 44%);
 }
 
+body {
+    margin: 0;
+}
+
 #white-container {
     margin-top: 30px;
     margin-left: 15px;
     margin-right: 15px;
     width: 40%;
-    min-height: 50%;
+    height: fit-content;
     position: absolute;
-    overflow-y: auto;
-    left: 50%;
-    transform: translate(-50%, -150%);
+    inset: 0;
+    margin-top: clamp(3%, 8%, 10%);
+    margin-bottom: clamp(5%, 10%, 15%);
+    overflow: auto;
+    margin-inline: auto;
     background: white;
     display: flex;
     flex-direction: column;
@@ -80,6 +97,11 @@ body {
     height: 30px;
     grid-column-start: 2;
     grid-column-end: 3;
+    cursor: pointer;
+}
+
+.plus-minus[data-state="expanded"] {
+    background-image: url(images/icon-minus.svg);
 }
 
 .question {
@@ -87,6 +109,11 @@ body {
     grid-template-columns: 93% 7%;
     grid-template-rows: 1fr;
     align-items: flex-start;
+    cursor: pointer;
+}
+
+.question:hover, .question:focus-within {
+    color: hsl(286, 69%, 48%);
 }
 
 br {
