--- a/styles.css
+++ b/styles.css
@@ -91,10 +91,16 @@ body {
     grid-column-start: 2;
     grid-column-end: 3;
     cursor: pointer;
+    padding: 1px;
+    box-sizing: border-box;
 }
 
 .plus-minus[data-state="expanded"] {
     background-image: url(images/icon-minus.svg);
+}
+
+.plus-minus[data-state="collapsed"] {
+    background-image: url(images/icon-plus.svg);
 }
 
 .question {
@@ -109,7 +115,7 @@ body {
     color: hsl(286, 69%, 48%);
 }
 
-br {
+hr {
     color: rgb(231, 231, 231);
     stroke-width: 4%;
 }
