--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ body {
 }
 
 #white-container {
-    margin-top: 30px;
     margin-left: 15px;
     margin-right: 15px;
     width: 40%;
@@ -28,7 +27,7 @@ body {
     inset: 0;
     margin-top: clamp(3%, 8%, 10%);
     margin-bottom: clamp(5%, 10%, 15%);
-    overflow: auto;
+   /* overflow: auto; */
     margin-inline: auto;
     background: white;
     display: flex;
@@ -43,6 +42,12 @@ h1 {
     font-size: 3rem;
     display: flex;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    background: white;
 }
 
 .answer {
@@ -57,7 +62,8 @@ h1 {
 
 #bottom-color {
     background-color: hsl(275, 100%, 97%);
-    height: 60vh;
+    height: 100vh;
+    bottom: 0;
 }
 
 body {
@@ -116,8 +122,8 @@ body {
 }
 
 hr {
-    color: rgb(231, 231, 231);
-    stroke-width: 4%;
+    color: 1px solid #ddd;
+    stroke-width: 1%;
 }
 
 .icon {
